<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#faf5f1">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/main"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageButton
        android:id="@+id/button_about"
        android:layout_width="70dp"
        android:layout_height="64dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/logo"
        android:focusable="true"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="@color/secmain" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/secmain">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:background="#292f36"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/about_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:contentDescription="@string/drin"
                android:scaleType="centerCrop"
                android:src="@drawable/drin" />

            <TextView
                android:id="@+id/about_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_image"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/nama_gw"
                android:textColor="@color/main"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/about_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_name"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/email_gw"
                android:textColor="@color/main" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
